force-app/src/objects/Account.object
<CustomObject>
    <fields>
        <fullName>CIS_SSE_License_Authority_Host_Country__c</fullName>
        <label>License Authority in Country</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>CIS_SSE_MAIS__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Mediterranean Association of International Schools</description>
        <label>MAIS</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CIS_SSE_Middle_School__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Middle School</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CIS_SSE_Montessori__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Montessori</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CIS_SSE_Multiple_Campus__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check if your school has more than one campus or site.</inlineHelpText>
        <label>Multiple Campuses</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CIS_SSE_NAIS__c</fullName>
        <defaultValue>false</defaultValue>
        <description>National Association of Independent Schools</description>
        <label>NAIS</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CIS_SSE_NESA__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Near East South Asia Council of International Schools</description>
        <label>NESA</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CIS_SSE_Nation_repres_in_student_enrol__c</fullName>
        <description>Number of nationalities represented in student enrolment
Field available in Academic Year Figures.</description>
        <label>(777)Nationalities represented among stu</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CIS_SSE_Nordic_Network_of_Int_Schools__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Nordic Network of International Schools</description>
        <label>Nordic Network of Intl Schools</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CIS_SSE_Number_of_faculty_working_days__c</fullName>
        <label>Number of faculty working days</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CIS_SSE_Number_of_leadership_staff__c</fullName>
        <description>Field availabe in Academic Year Figures</description>
        <inlineHelpText>Include head of school, deputy head, principal(s), assistant principals, etc.</inlineHelpText>
        <label>(777) Number of Leadership Staff</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CIS_SSE_Number_of_student_contact_days__c</fullName>
        <label>Number of student contact days</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CIS_SSE_Oldest_age_for_leaving__c</fullName>
        <inlineHelpText>Oldest age at which students can enroll at your school.</inlineHelpText>
        <label>Oldest age for leaving or graduating</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CIS_SSE_Other__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Other</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CIS_SSE_Outcome_School_Membership_App__c</fullName>
        <label>Outcome School Membership App</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>CIS_SSE_Grade__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Membership</fullName>
                </value>
                <value>
                    <fullName>Membership Only</fullName>
                </value>
                <value>
                    <fullName>Membership and Start Accreditation</fullName>
                </value>
                <value>
                    <fullName>Postpone or Not Offer Membership</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CIS_SSE_Percent_of_overseas_stud_enrolm__c</fullName>
        <description>Overseas student: A student who is not from the country where the school is located.
Field also exists in Academic Year Figures.</description>
        <label>(777) Percentage of overseas student enr</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>CIS_SSE_Percent_of_total_above_over_fac__c</fullName>
        <description>Field also exists in Academic Year Figures.</description>
        <inlineHelpText>Overseas faculty: staff with teaching credentials coming from outside the country where the school is located</inlineHelpText>
        <label>(777) Percentage of overseas faculty</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>CIS_SSE_Percent_of_total_national_facult__c</fullName>
        <description>National faculty: staff with teaching credentials coming from the country where the school is located
Field avaiablein academic year figures.</description>
        <label>(777) Percentage of national faculty</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>CIS_SSE_Primary_Elementary__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Primary/Elementary</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CIS_SSE_Provide_admis_criteria__c</fullName>
        <defaultValue>true</defaultValue>
        <description>D1ii. Teachers support the expectation that all students admitted to the school can succeed within the existing school programme.</description>
        <label>Admissions Criteria and Policy</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CIS_SSE_Provide_doc_govern_owner_leader__c</fullName>
        <defaultValue>false</defaultValue>
        <description>B1i. The roles and responsibilities of ownership, governance, leadership and management are clearly defined and set out in written form.</description>
        <label>Governance, Ownership and Leadership</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CIS_SSE_Provide_evidence_of_screening__c</fullName>
        <defaultValue>false</defaultValue>
        <description>F2i. All employees have undergone thorough background screening.</description>
        <label>Reference and Background Check Policy</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CIS_SSE_Provide_example_of_Health_policy__c</fullName>
        <defaultValue>true</defaultValue>
        <description>G1ii. Due regard is given to providing a safe and secure environment for all users.</description>
        <label>Teaching - Well-being of Students</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CIS_SSE_Provide_example_of_commitment__c</fullName>
        <defaultValue>false</defaultValue>
        <description>F3i. Faculty and staff have access to professional development (PD).</description>
        <label>Committement to PD of Staff</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CIS_SSE_Provide_example_of_contracts__c</fullName>
        <defaultValue>false</defaultValue>
        <description>F4i. Staff recruitment and retention is managed in accordance with the CIS Code of Ethics.</description>
        <label>Teacher Contract</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CIS_SSE_Provide_example_of_parents_comm__c</fullName>
        <defaultValue>false</defaultValue>
        <description>H1i. The school communicates regularly and systematically with parents and guardians to explain the mission of the school, its operations and the education provided to each individual child enrolled.</description>
        <label>Communication with Parents</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CIS_SSE_Provide_examples_of_policy__c</fullName>
        <defaultValue>false</defaultValue>
        <description>E3i. A policy framework and supporting procedures are implemented covering all aspects of the welfare of all students: anti-bullying, child protection, complaints, behaviour, security and safeguarding and health.</description>
        <label>Health and Safety Policy</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CIS_SSE_Provide_guiding_statements__c</fullName>
        <defaultValue>true</defaultValue>
        <description>A1i. The school has appropriate Guiding Statements in place to give it purpose and direction.</description>
        <label>Guiding Statements</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CIS_SSE_Provide_job_descr_and_CV_HoS__c</fullName>
        <defaultValue>false</defaultValue>
        <description>B2i. The Head’s role as the educational leader including the responsibility for implementing the mission and having the ultimate responsibility and accountability for the students’ education and well-being is articulated in a formal job description and fully understood by all members of the Board.</description>
        <label>HoS Contract, Job Description and CV</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CIS_SSE_Provide_last_signed_audit_report__c</fullName>
        <defaultValue>false</defaultValue>
        <description>B3i. The Proprietors/ Governors are able to demonstrate through a strategic plan that the school’s short and long term finances are sufficient to support the school’s mission and programmes and sustain the school’s operations into the foreseeable future.</description>
        <label>Audit Reports and Budget</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CIS_SSE_Provide_link_guide_board_or_home__c</fullName>
        <defaultValue>true</defaultValue>
        <description>I2i. A policy framework and supporting procedures is in place covering all aspects of the health, welfare and security of residential students: anti-bullying, child protection, complaints, behaviour, security and safeguarding.</description>
        <label>Boarding Policy or Guide</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CIS_SSE_Provide_list_of_teachers__c</fullName>
        <defaultValue>true</defaultValue>
        <description>F1i. There are sufficient numbers of faculty and support staff, commensurate with the number of students, to ensure a satisfactory learning experience for the students in accordance with the school’s services, curriculum and co-curricular</description>
        <label>Teacher List and Qualifications</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CIS_SSE_Provide_parents_guide__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>C1i. The school’s curriculum design, teaching practices, and student learning are aligned to the school’s purpose and direction. Please provide for each section/division of your school. It may be a link to a website or an uploaded brochure.</inlineHelpText>
        <label>Parents&apos; Guide to Curriculum</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CIS_SSE_Reason_for_CIS_Membership__c</fullName>
        <label>Reason for CIS Membership</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CIS_SSE_Reflection_CIS_Code_of_Ethics__c</fullName>
        <label>Reflection CIS Code of Ethics</label>
        <length>3000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CIS_SSE_Reflection_Global_Citizenship__c</fullName>
        <label>Reflection Global Citizenship</label>
        <length>3000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CIS_SSE_Reflection_Improvements__c</fullName>
        <label>Reflection Improvements</label>
        <length>3000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CIS_SSE_SGIS__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Swiss Group of International Schools</description>
        <label>SGIS</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CIS_SSE_School_Group__c</fullName>
        <inlineHelpText>If your school is legally part of a group, organisation or company of schools, indicate the name of the group, organisation or company. If your group is not listed, please email membership@cois.org.</inlineHelpText>
        <label>OBSOLETE - School Group</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>ACS International Schools, UK</fullName>
                </value>
                <value>
                    <fullName>Brent International Schools, Philippines</fullName>
                </value>
                <value>
                    <fullName>British Schools Foundation</fullName>
                </value>
                <value>
                    <fullName>Chadwick International</fullName>
                </value>
                <value>
                    <fullName>Cognita</fullName>
                </value>
                <value>
                    <fullName>Dulwich College International</fullName>
                </value>
                <value>
                    <fullName>Dwight Schools</fullName>
                </value>
                <value>
                    <fullName>English Modern Schools, Qatar</fullName>
                </value>
                <value>
                    <fullName>English Schools Foundation</fullName>
                </value>
                <value>
                    <fullName>ESOL Education</fullName>
                </value>
                <value>
                    <fullName>FEYZİYE MEKTEPLERİ VAKFI IŞIK</fullName>
                </value>
                <value>
                    <fullName>GEMS, UAE</fullName>
                </value>
                <value>
                    <fullName>Harrow International Schools</fullName>
                </value>
                <value>
                    <fullName>International Schools Group</fullName>
                </value>
                <value>
                    <fullName>Nazarbayev Intellectual Schools</fullName>
                </value>
                <value>
                    <fullName>Nord Anglia Education</fullName>
                </value>
                <value>
                    <fullName>Orbital Education</fullName>
                </value>
                <value>
                    <fullName>Pathways Schools, India</fullName>
                </value>
                <value>
                    <fullName>Qatar Academies</fullName>
                </value>
                <value>
                    <fullName>SEK Schools, Spain</fullName>
                </value>
                <value>
                    <fullName>SEV Schools, Turkey</fullName>
                </value>
                <value>
                    <fullName>Sinav Koleji</fullName>
                </value>
                <value>
                    <fullName>Taaleem Schools</fullName>
                </value>
                <value>
                    <fullName>Tenby Schools, Malaysia</fullName>
                </value>
                <value>
                    <fullName>United World Colleges</fullName>
                </value>
                <value>
                    <fullName>Wellington College China</fullName>
                </value>
                <value>
                    <fullName>Yew Chung Schools</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CIS_SSE_School_profile_link__c</fullName>
        <label>School profile link</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>CIS_SSE_Senior_High_School__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Senior/High School</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CIS_SSE_TAISI__c</fullName>
        <defaultValue>false</defaultValue>
        <description>The Association of International Schools in India</description>
        <label>TAISI</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CIS_SSE_TRI_Association__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Latin American Tri-Association</description>
        <label>TRI-Association</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CIS_SSE_Teaching_language_1__c</fullName>
        <label>Language of instruction 1</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Aboriginal native languages</fullName>
                </value>
                <value>
                    <fullName>Afrikaans</fullName>
                </value>
                <value>
                    <fullName>Akan</fullName>
                </value>
                <value>
                    <fullName>Albanian</fullName>
                </value>
                <value>
                    <fullName>Amharic</fullName>
                </value>
                <value>
                    <fullName>Arabic</fullName>
                </value>
                <value>
                    <fullName>Aranese</fullName>
                </value>
                <value>
                    <fullName>Armenian</fullName>
                </value>
                <value>
                    <fullName>Assamese</fullName>
                </value>
                <value>
                    <fullName>Aymara</fullName>
                </value>
                <value>
                    <fullName>Azerbaijani</fullName>
                </value>
                <value>
                    <fullName>Bahasa Indonesia</fullName>
                </value>
                <value>
                    <fullName>Bahasa Malaysia</fullName>
                </value>
                <value>
                    <fullName>Bambara</fullName>
                </value>
                <value>
                    <fullName>Basque</fullName>
                </value>
                <value>
                    <fullName>Belarusian</fullName>
                </value>
                <value>
                    <fullName>Bengali</fullName>
                </value>
                <value>
                    <fullName>Berber</fullName>
                </value>
                <value>
                    <fullName>Bikolono</fullName>
                </value>
                <value>
                    <fullName>Bisaya</fullName>
                </value>
                <value>
                    <fullName>Bosnian</fullName>
                </value>
                <value>
                    <fullName>Bulgarian</fullName>
                </value>
                <value>
                    <fullName>Burmese</fullName>
                </value>
                <value>
                    <fullName>Cajun French</fullName>
                </value>
                <value>
                    <fullName>Catalan</fullName>
                </value>
                <value>
                    <fullName>Cebuano</fullName>
                </value>
                <value>
                    <fullName>Chamorro</fullName>
                </value>
                <value>
                    <fullName>Chavacano</fullName>
                </value>
                <value>
                    <fullName>Chichewa</fullName>
                </value>
                <value>
                    <fullName>Chinese</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CIS_SSE_Teaching_language_2__c</fullName>
        <label>Language of instruction 2</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Aboriginal native languages</fullName>
                </value>
                <value>
                    <fullName>Afrikaans</fullName>
                </value>
                <value>
                    <fullName>Akan</fullName>
                </value>
                <value>
                    <fullName>Albanian</fullName>
                </value>
                <value>
                    <fullName>Amharic</fullName>
                </value>
                <value>
                    <fullName>Arabic</fullName>
                </value>
                <value>
                    <fullName>Aranese</fullName>
                </value>
                <value>
                    <fullName>Armenian</fullName>
                </value>
                <value>
                    <fullName>Assamese</fullName>
                </value>
                <value>
                    <fullName>Aymara</fullName>
                </value>
                <value>
                    <fullName>Azerbaijani</fullName>
                </value>
                <value>
                    <fullName>Bahasa Indonesia</fullName>
                </value>
                <value>
                    <fullName>Bahasa Malaysia</fullName>
                </value>
                <value>
                    <fullName>Bambara</fullName>
                </value>
                <value>
                    <fullName>Basque</fullName>
                </value>
                <value>
                    <fullName>Belarusian</fullName>
                </value>
                <value>
                    <fullName>Bengali</fullName>
                </value>
                <value>
                    <fullName>Berber</fullName>
                </value>
                <value>
                    <fullName>Bikolono</fullName>
                </value>
                <value>
                    <fullName>Bisaya</fullName>
                </value>
                <value>
                    <fullName>Bosnian</fullName>
                </value>
                <value>
                    <fullName>Bulgarian</fullName>
                </value>
                <value>
                    <fullName>Burmese</fullName>
                </value>
                <value>
                    <fullName>Cajun French</fullName>
                </value>
                <value>
                    <fullName>Catalan</fullName>
                </value>
                <value>
                    <fullName>Cebuano</fullName>
                </value>
                <value>
                    <fullName>Chamorro</fullName>
                </value>
                <value>
                    <fullName>Chavacano</fullName>
                </value>
                <value>
                    <fullName>Chichewa</fullName>
                </value>
                <value>
                    <fullName>Chinese</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CIS_SSE_Teaching_language_3__c</fullName>
        <label>Language of instruction 3</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Aboriginal native languages</fullName>
                </value>
                <value>
                    <fullName>Afrikaans</fullName>
                </value>
                <value>
                    <fullName>Akan</fullName>
                </value>
                <value>
                    <fullName>Albanian</fullName>
                </value>
                <value>
                    <fullName>Amharic</fullName>
                </value>
                <value>
                    <fullName>Arabic</fullName>
                </value>
                <value>
                    <fullName>Aranese</fullName>
                </value>
                <value>
                    <fullName>Armenian</fullName>
                </value>
                <value>
                    <fullName>Assamese</fullName>
                </value>
                <value>
                    <fullName>Aymara</fullName>
                </value>
                <value>
                    <fullName>Azerbaijani</fullName>
                </value>
                <value>
                    <fullName>Bahasa Indonesia</fullName>
                </value>
                <value>
                    <fullName>Bahasa Malaysia</fullName>
                </value>
                <value>
                    <fullName>Bambara</fullName>
                </value>
                <value>
                    <fullName>Basque</fullName>
                </value>
                <value>
                    <fullName>Belarusian</fullName>
                </value>
                <value>
                    <fullName>Bengali</fullName>
                </value>
                <value>
                    <fullName>Berber</fullName>
                </value>
                <value>
                    <fullName>Bikolono</fullName>
                </value>
                <value>
                    <fullName>Bisaya</fullName>
                </value>
                <value>
                    <fullName>Bosnian</fullName>
                </value>
                <value>
                    <fullName>Bulgarian</fullName>
                </value>
                <value>
                    <fullName>Burmese</fullName>
                </value>
                <value>
                    <fullName>Cajun French</fullName>
                </value>
                <value>
                    <fullName>Catalan</fullName>
                </value>
                <value>
                    <fullName>Cebuano</fullName>
                </value>
                <value>
                    <fullName>Chamorro</fullName>
                </value>
                <value>
                    <fullName>Chavacano</fullName>
                </value>
                <value>
                    <fullName>Chichewa</fullName>
                </value>
                <value>
                    <fullName>Chinese</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CIS_SSE_Usage_Teaching_language_1__c</fullName>
        <inlineHelpText>What percentage of instruction is done with language 1?</inlineHelpText>
        <label>% Usage of language of instruction 1</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>CIS_SSE_Usage_Teaching_language_2__c</fullName>
        <inlineHelpText>What percentage of instruction is done with language 2?</inlineHelpText>
        <label>% Usage of language of instruction 2</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>CIS_SSE_Usage_Teaching_language_3__c</fullName>
        <inlineHelpText>What percentage of instruction is done with language 3?</inlineHelpText>
        <label>% Usage of language of instruction 3</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>CIS_SSE_VAT_number__c</fullName>
        <label>VAT number</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CIS_SSE_Year_founded__c</fullName>
        <label>Year founded</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CIS_SSE_percent_national_student_enrolm__c</fullName>
        <description>National student: A student who is a citizen of the country where the school is located.
Field avaiable in Academic Year Figures.</description>
        <label>(777)Percentage of national student enro</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>CIS_SSE_youngest_enrollment_age__c</fullName>
        <inlineHelpText>Youngest age at which students can enroll at your school.</inlineHelpText>
        <label>Youngest enrollment age</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CPBase__Restrict_Assignment_Visibility__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field restricts a contacts ability to see other contacts related to this account when purchasing items that have assignments enabled.</description>
        <inlineHelpText>This field restricts a contacts ability to see other contacts related to this account when purchasing items that have assignments enabled.</inlineHelpText>
        <label>DEPRECATED</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CTCM__Account_description__c</fullName>
        <description>Field used for the FFDC bank statement functionality</description>
        <formula>&apos;&lt;b&gt;&apos; &amp; Name &amp; &apos;&lt;/b&gt;,&lt;br&gt;&apos; &amp; BillingStreet &amp; &apos;,&lt;br&gt;&apos; &amp; 
BillingCity &amp; &apos;,&lt;br&gt;&apos; &amp; BillingCountry&amp; &apos;&lt;br&gt;&lt;br&gt;&apos;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account description</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CTCM__Alternative_Bank_Currency__c</fullName>
        <label>Alternative Bank Currency</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CTCM__Alternative_Bank_IBAN_Number__c</fullName>
        <label>Alternative Bank IBAN Number</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CTCM__ChargeBearer__c</fullName>
        <inlineHelpText>For international Payments:
CRED–The Payee will incur all the transaction fees
DEBT–The Payer will bear all the transaction fees
SHAR –The Payer will pay all fees charged by the sending bank. The Payee will pay all fees charged by the receiving bank.</inlineHelpText>
        <label>Charge Bearer</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>DEBT</fullName>
                    <label>DEBT (debtor)</label>
                </value>
                <value>
                    <fullName>CRED</fullName>
                    <label>CRED (creditor)</label>
                </value>
                <value>
                    <fullName>SHAR</fullName>
                    <default>true</default>
                    <label>SHAR (shared)</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CTCM__ClearingMemberID__c</fullName>
        <inlineHelpText>Bank identifier in (numeric format), for more details, see: https://www.ibm.com/support/knowledgecenter/SSRH46_3.0.0/fxhmapr2018clrcodes.html</inlineHelpText>
        <label>Clearing Member ID</label>
        <length>35</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CTCM__ClearingMemberName__c</fullName>
        <inlineHelpText>Mandatory for international payments with a clearing agent</inlineHelpText>
        <label>Clearing Member Name</label>
        <length>70</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CTCM__ESR_Number__c</fullName>
        <description>For Swiss Red &amp; Orange Payment Slips.</description>
        <inlineHelpText>Swiss ESR Identifier. Mandatory for Swiss ESR payments (orange &amp; red payment slips)</inlineHelpText>
        <label>ESR Number</label>
        <length>11</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CTCM__G_Account_SWIFT__c</fullName>
        <label>G Account SWIFT</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CTCM__G_Bank_Account_Name__c</fullName>
        <label>G Bank Account Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CTCM__G_Bank_Account_perc__c</fullName>
        <label>G BankAccount %</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CTCM__G_Bank_IBAN_Number__c</fullName>
        <label>G Bank IBAN Number</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CTCM__Last_Direct_Debit_Date__c</fullName>
        <inlineHelpText>The date of the last Direct Debit transaction for the current mandate</inlineHelpText>
        <label>Last Direct Debit Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CTCM__Mandate_Date__c</fullName>
        <inlineHelpText>Date on which the Direct Debit mandate has been signed by the debtor.</inlineHelpText>
        <label>Mandate Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CTCM__Mandate_Identifier__c</fullName>
        <inlineHelpText>Unique reference of the Direct Debit mandate that has been signed between the debtor and the creditor</inlineHelpText>
        <label>Mandate Identifier</label>
        <length>35</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>CTCM__PaymentSystemPrefix__c</fullName>
        <inlineHelpText>The country&apos;s payment system prefix (5 characters). E.g. &quot;ATBLZ&quot;, &quot;USABA&quot; or &quot;CACPA&quot;. See for more details: https://www.sepaforcorporates.com/swift-for-corporates/list-ncc-national-clearing-codes/</inlineHelpText>
        <label>Payment System Prefix</label>
        <length>5</length>
        <type>Text</type>
    </fields>
</CustomObject>